--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "geist": "^1.3.1",
     "gsap": "^3.13.0",
     "input-otp": "1.4.1",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
