--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "input-otp": "1.4.1",
     "lenis": "^1.3.17",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.3.9",
     "next-themes": "^0.4.4",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
